# MASH

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LARRYENGINEERREPORT.md  LICENSE  Makefile  README.md  REFACTORING_SWEEP_REPORT.md  RELEASING.md  install.sh  install.sh.bak  install.sh.before-binary-fix  mash-installer-v1.0.8.tar  mash-installer-v1.0.8.tar.gz.sha256  quick-fix.sh
.gemini/: GEMINI.md  settings.json  settings.json.bak
.github/: pull_request_template.md
crates/mash-hal/: Cargo.toml  README.md
crates/mash-hal/src/: error.rs  lib.rs  os_release.rs  path.rs
crates/mash-hal/src/hal/: btrfs_ops.rs  copy_ops.rs  fake_hal.rs  flash_ops.rs  format_ops.rs  guards.rs  host_info_ops.rs  linux_hal.rs  loop_ops.rs  mod.rs  mount_ops.rs  partition_ops.rs  probe_ops.rs  process_ops.rs  rsync_ops.rs  system_ops.rs
crates/mash-hal/src/procfs/: meminfo.rs  mod.rs  mountinfo.rs
crates/mash-hal/src/sysfs/: block.rs  mod.rs
crates/mash-tui/: Cargo.toml
crates/mash-tui/src/: input.rs  lib.rs  progress.rs  widgets.rs
crates/mash-tui/src/dojo/: data_sources.rs  dojo_app.rs  dojo_ui.rs  flash_config.rs  mod.rs
crates/mash-tui/src/dojo/dojo_app/: app.rs  input.rs  mod.rs  steps.rs  types.rs
crates/mash-tui/src/dojo/dojo_ui/: content.rs  dump.rs  mod.rs  render.rs  sidebar.rs
crates/mash-tui/tests/: dojo_integration.rs
crates/mash-workflow/: Cargo.toml
crates/mash-workflow/src/: install_runner.rs  lib.rs  preflight.rs  stage_runner.rs  test_env.rs
crates/mash-workflow/src/installer/: os_install.rs  pipeline.rs
crates/mash-workflow/src/installer/pipeline/: config.rs  mod.rs  plan.rs  run.rs  stage_defs.rs  stages.rs  tests.rs
docs/: ARCHITECTURE.md  CATALOGUE_EXTENSIBILITY.md  DEPLOYMENT.md  DISK_OPS_MODULE.md  DOJO.md  ENGINEERING_REVIEW_CLAUDE.md  EngineerSweep01.md  INSTALL_STAGES_MODULE.md  ISSUE_12_AGENT_SKILLS.md  ISSUE_13_MASH_CORE_READONLY.md  ISSUE_15_RUSTIFICATION_PHASE2_CONTINUATION.md  ISSUE_8_RUSTIFICATION_AUDIT_COMPLETED.md  ISSUE_9_SCRIPT_RUSTIFICATION_INVENTORY.md  LEGACY_SCRIPTS.md  LIBDNF_SPIKE.md  MOE_PHASE_PLAN.md  OS_IMAGE_LINKS.md  PHASES.md  QUICKSTART.md  RECOVERY.md  REFACTOR_PLAN.md  RELEASING.md  ROADMAP.md  RUSTIFICATION_PLAN.md  dojo-catalogue.schema.toml  os-download-links.toml  v1.3.1-ferrari-audit.md  v1.3.1-release-notes.md
dojo/: dojo.toml
dojo_bundle/: install_dojo.sh
helpers/: 00_write_config_txt.sh  03_stage_starship_toml.sh  05_fonts_essential.sh  10_locale_uk.sh  11_snapper_init.sh  12_firewall_sane.sh  20_argon_one.sh  22_kde_screensaver_nuke.sh
legacy/: README.md
legacy_scripts/: README.MD  mash_bootstrap_v2.py  ninja-mbr4-v2.py
libdnf-sys/: Cargo.toml  build.rs
mash-core/: Cargo.toml
mash-core/src/: cli.rs  config_states.rs  dojo_catalogue.rs  dojo_install_template.sh  download.rs  download_manager.rs  errors.rs  flash.rs  install_report.rs  lib.rs  locale.rs  logging.rs  main.rs  preflight.rs  process_timeout.rs  progress.rs  test_env.rs
mash-core/src/boot_config/: mod.rs  usb_root_fix.rs
mash-core/src/disk_ops/: format.rs  mod.rs  mounts.rs
mash-core/src/downloader/: index.rs  mod.rs  types.rs
mash-core/src/flash/: approvals.rs  cancel.rs  config.rs  mod.rs  mounts.rs  runner.rs  staging.rs
mash-core/src/installer/: mod.rs  os_install.rs  pipeline.rs
mash-core/src/partitioning/: mod.rs
mash-core/src/stage_runner/: mod.rs
mash-core/src/stages/: stage_00_write_config_txt.rs  stage_01_stage_bootstrap.rs  stage_02_early_ssh.rs  stage_03_fail2ban_lite.rs  stage_03_stage_starship_toml.rs  stage_05_fonts_essential.rs
mash-core/src/state_manager/: mod.rs
mash-core/src/system_config/: mod.rs  packages.rs  resume.rs  services.rs
mash-core/src/tui/: app.rs  data_sources.rs  dojo_app.rs  dojo_ui.rs  flash_config.rs  input.rs  mod.rs  new_app.rs  new_ui.rs  progress.rs  widgets.rs
mash-error/: Cargo.toml
mash-installer/: Cargo.toml
mash-installer-aarch64-unknown-linux-gnu/: mash-installer-aarch64-unknown-linux-gnu
mash-installer/firstboot/dojo/: default_catalogue.toml  main.rs  mash-dojo.service
mash-installer/mash-installer/: Cargo.toml
mash-installer/mash-installer/src/: cli.rs  errors.rs  flash.rs  logging.rs  preflight.rs
mash-installer/src/: cli.rs  config.rs  disk_ops.rs  download.rs  errors.rs  fixes.rs  flash.rs  lib.rs  locale.rs  logging.rs  main.rs  preflight.rs
mash-installer/src/dojo/: argon_one.rs  audio.rs  bootcount.rs  bootstrap.rs  borg.rs  browser.rs  dojo_entry.rs  early_ssh.rs  firewall.rs  graphics.rs  install_dojo.rs  internet_wait.rs  menu.rs  mod.rs  mount_data.rs  rclone.rs  snapper.rs
mash-installer/src/stages/: mod.rs  package_management.rs  stage_00_write_config_txt.rs  stage_02_early_ssh.rs  stage_02_internet_wait.rs  stage_03_stage_starship_toml.rs  stage_05_fonts_essential.rs  stage_10_locale_uk.rs  stage_11_snapper_init.rs  stage_12_firewall_sane.rs  stage_13_packages_core.rs  stage_14_packages_dev.rs  stage_15_packages_desktop.rs  stage_16_mount_data.rs  stage_17_brave_browser.rs  stage_17_brave_default.rs  stage_20_argon_one.rs  stage_21_zsh_starship.rs  stage_22_kde_screensaver_nuke.rs
mash-installer/src/tui/: app.rs  data_sources.rs  input.rs  mod.rs  new_app.rs  new_ui.rs  progress.rs  ui.rs  widgets.rs
mash-installer/src/ui/: cancel.rs  confirm.rs  mod.rs  style.rs  validation.rs
mash-installer/tests/: confirmation_tests.rs  disk_ops_tests.rs  input_validation_tests.rs  integration_tests.rs  package_management_tests.rs  stage_misc_helpers_tests.rs  stage_write_config_tests.rs  stages_integration_tests.rs  zsh_starship_tests.rs
qt-gui/: CMakeLists.txt  mash-installer.desktop.in
qt-gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
scripts/: argon_one.sh  bump-version.sh  dracut.sh  kernel_upgrade.sh  mash-full-loop.py  mount_data.sh  stage_files.sh  tag-release.sh
tools/mash-core/: Cargo.toml  README.md
tools/mash-core/src/: lib.rs
tools/mash-release/: Cargo.toml
tools/mash-release/src/: main.rs  version.rs
tools/mash-tools/: Cargo.toml
tools/mash-tools/src/: main.rs
(+125 files in other folders)
