[workspace]
resolver = "2"
members = [
    "libdnf-sys",
    "mash-core",
    "mash-installer",
    "tools/mash-release",
    "tools/mash-tools",
]
default-members = [
    "mash-core",
    "mash-installer",
    "tools/mash-release",
    "tools/mash-tools",
]

[workspace.package]
version = "1.2.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
