[workspace]
resolver = "2"
members = [
    "bin/larry_cli",
    "mash-error",
    "crates/mash-hal",
    "crates/mash-workflow",
    "crates/mash-tui",
    "libdnf-sys",
    "mash-core",
    "mash-installer",
    "tools/mash-release",
    "tools/mash-tools",
]
default-members = [
    "bin/larry_cli",
    "mash-error",
    "crates/mash-hal",
    "crates/mash-workflow",
    "crates/mash-tui",
    "mash-core",
    "mash-installer",
    "tools/mash-release",
    "tools/mash-tools",
]

[workspace.package]
version = "1.2.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
