[package]
name = "mash-core"
version = "1.2.14"
edition = "2021"
authors = ["MASH Team"]
description = "🍠 MASH core installer library"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["mount", "fs"] }
libc = "0.2"
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = "0.6"
url = "2.5"
zbus = { version = "4.4", features = ["blocking"] }
sha2 = "0.10"
toml = "0.7"
once_cell = "1.21"
xz2 = "0.1"
tempfile = "3"
wait-timeout = "0.2"
libdnf-sys = { path = "../libdnf-sys", optional = true }
mash-hal = { path = "../crates/mash-hal" }
mash-error = { path = "../mash-error" }

[features]
default = []
libdnf = ["dep:libdnf-sys"]

[dev-dependencies]
httpmock = "0.7"
