[package]
name = "mash"
version = "1.2.2"
edition = "2021"
authors = ["MASH Team"]
description = "🍠 MASH - Fedora KDE for Raspberry Pi 4B with UEFI boot + Dojo system"

[workspace]

[[bin]]
name = "mash"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.27", features = ["mount", "fs"] }
libc = "0.2"
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = "0.6"
url = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
