[package]
name = "mash-installer"
version = "1.2.14"
edition = "2021"
authors = ["MASH Team"]
description = "🍠 MASH - Fedora KDE for Raspberry Pi 4B with UEFI boot + Dojo system"

[[bin]]
name = "mash"
path = "src/main.rs"

[[bin]]
name = "mash-dojo"
path = "firstboot/dojo/main.rs"

[dependencies]
mash-core = { path = "../mash-core", default-features = false }
mash-hal = { path = "../crates/mash-hal" }
mash-tui = { path = "../crates/mash-tui" }
mash-workflow = { path = "../crates/mash-workflow" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.27", features = ["mount", "fs"] }
libc = "0.2"
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = "0.6"
url = "2.5"

[dev-dependencies]
tempfile = "3"
