[package]
name = "mash-hal"
version = "0.1.0"
edition = "2021"

description = "Hardware abstraction layer interfaces for MASH (scaffold)"
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4"
nix = { version = "0.29", features = ["mount"] }
thiserror = "2"
xz2 = "0.1"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
