[package]
name = "mash-hal"
version = "0.1.0"
edition = "2021"

description = "Hardware abstraction layer interfaces for MASH (scaffold)"
license = "MIT"

[dependencies]
anyhow = "1.0"
filetime = "0.2"
log = "0.4"
nix = { version = "0.29", features = ["mount", "fs", "user"] }
thiserror = "2"
walkdir = "2.5"
wait-timeout = "0.2"
xz2 = "0.1"

[dev-dependencies]
tempfile = "3"
