[package]
name = "mash-hal"
version = "0.1.0"
edition = "2021"

description = "Hardware abstraction layer interfaces for MASH (scaffold)"
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4"
nix = { version = "0.29", features = ["mount"] }
libc = "0.2"
mash-error = { path = "../../mash-error" }
xz2 = "0.1"
wait-timeout = "0.2"
gpt = "3.1"
mbrman = "0.6"
fatfs = { version = "0.3", default-features = false, features = ["std"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
