[package]
name = "mash-tui"
version = "0.1.0"
edition = "2021"

description = "Terminal UI for MASH installer (scaffold)"
license = "MIT"

[dependencies]
crossterm = "0.28"
mash-core = { path = "../../mash-core" }
mash-workflow = { path = "../mash-workflow" }
mash-hal = { path = "../mash-hal" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
ratatui = "0.28"
