[package]
name = "mash-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
regex = "1"
