[package]
name = "mash-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
toml_edit = "0.22"
