[package]
name = "mash-tools"
version = "1.2.14"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
mash-hal = { path = "../../crates/mash-hal" }
toml_edit = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7"
